--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -4,7 +4,12 @@
         <h1 class="text-center mb-3">
           <i class="fas fa-user-plus"></i> Register
         </h1>
-      
+
+        <P>
+            <FONT color = "ff0000" size = "2" face="Calibri">All the fields should be fill </FONT><BR>
+            <FONT color = "ff0000" size = "2" face="Calibri">Password should have at least 6 characters </FONT><BR>
+        </P>
+   
         <form action="/users/register" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
@@ -39,17 +44,7 @@
               value="<%= typeof password != 'undefined' ? password : '' %>"
             />
           </div>
-          <div class="form-group">
-            <label for="password2">Confirm Password</label>
-            <input
-              type="password"
-              id="password2"
-              name="password2"
-              class="form-control"
-              placeholder="Confirm Password"
-              value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
-            />
-          </div>
+
           <button type="submit" class="btn btn-primary btn-block">
             Register
           </button>
