Le formulaire d'enregistrement est fait et est connecté avec la DB

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -8,6 +8,7 @@
         <P>
             <FONT color = "ff0000" size = "2" face="Calibri">All the fields should be fill </FONT><BR>
             <FONT color = "ff0000" size = "2" face="Calibri">Password should have at least 6 characters </FONT><BR>
+            <FONT color = "ff0000" size = "2" face="Calibri">No registration possible if the email is already use </FONT><BR>
         </P>
    
         <form action="/users/register" method="POST">
