Once we are register. We can isert data in db but not visualisation is yet possible

--- a/src/views/partials/messages.ejs
+++ b/src/views/partials/messages.ejs
@@ -27,3 +27,9 @@
       </button>
     </div>
     <% } %>
+
+   <% if(locals.flash && locals.flash.error){ %>
+      <div class="ui negative message" >
+        <%= flash.error %>
+      </div>
+      <% } %>
