--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -1,4 +1,38 @@
 
 <h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= user.name %></p>
+<p class="lead mb-3">Welcome <%=name%></p>
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
+
+<div class="row mt-3">
+    <div class="col-md-6 m-auto">
+      <div class="card card-body">
+      
+ 
+     
+        <form action="/dashboard" method="POST">
+          <div class="form-group">
+            <label for="message">Date</label>
+            <input
+              type="date"
+              id="date"
+              name="date"
+              class="form-control"
+              placeholder=""
+            />
+          </div>
+          <div class="form-group">
+            <label for="number">Number</label>
+            <input
+              type="number"
+              id="number"
+              name="number"
+              class="form-control"
+              placeholder=""
+            />
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Add Metric</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
