--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://bootswatch.com/4/journal/bootstrap.min.css"
     />
-    <title>Node.js & Passport Login App</title>
+    <title>nodeJS App using chart</title>
   </head>
   <body>
     <div class="container"><%- body %></div>
