--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -107,7 +107,7 @@
       data: {
         labels: listDate,
         datasets: [{
-            label: 'My First dataset',
+            label: 'Dataset',
             backgroundColor: 'rgb(235, 104, 100)',
             borderColor: 'rgb(235, 104, 100)',
             data: listNumber
